Changed button funtionality

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -9,30 +9,30 @@
     tools:context=".MainActivity" >
 
     <Button
-        android:id="@+id/btnSurrey"
+        android:id="@+id/btnTrack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:onClick="onClick_Surrey"
-        android:text="Surrey" />
+        android:onClick="onClick_Track"
+        android:text="Track Me" />
 
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_below="@+id/btnSurrey"
+        android:layout_below="@+id/btnTrack"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
     <Button
-        android:id="@+id/btnCity"
+        android:id="@+id/btnFind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:onClick="onClick_City"
-        android:text="City" />
+        android:onClick="onClick_Find"
+        android:text="Find Me" />
 
 </RelativeLayout>
